www/default.css
/* Global styling */
body {
	background-color:#F9F9F9;
	margin:0 auto 0 auto;
	width:840px;
}
.box {
	clear:both;
	float:left;
	width:840px;
}
.grey {
	color:#999;
}
.left {
	float:left;
}
.right {
	color:#999;
	float:right;
	font-weight:normal;
}
.head {
	background-color:#EEE;
	color:#666;
	float:left;
	font-family:verdana, sans-serif;
	font-size:12px;
	font-weight:bold;
	margin:15px 22px 7px 0;
	text-align:center;
	width:818px
}
.info {
	color:#666;
	float:left;
	font-family:verdana, sans-serif;
	font-size:12px;
	font-weight:bold;
	margin:15px 22px 7px 0;
	width:818px;
}

/* Global table styling */
.graph,.mad,.yearly,.map,.tod,.small,.large {
	background-color:#EEE;
	border-collapse:separate;
	border-color:#666;
	border-spacing:0;
	border-style:solid;
	border-width:3px 1px 1px 1px;
	color:#333;
	float:left;
	font-family:verdana, sans-serif;
	font-size:10px;
	margin:15px 22px 7px 0;
}

/* Specific table styling: activity graphs, most active days, yearly activity */
.graph,.mad,.yearly {
	text-align:center;
}
.graph img,.mad img,.yearly img {
	display:block;
	margin-left:auto;
	margin-right:auto;
	width:16px;
}
.graph {
	width:818px;
}
.mad {
	width:240px;
}
.yearly { 
	/* Variable width, specified in HTML */
}
.graph th,.mad th,.yearly th {
	color:#666;
	font-weight:bold;
	padding:1px 0 0 3px;
	text-align:left;
}
.graph tr.bars td,.mad tr.bars td,.yearly tr.bars td {
	height:125px;
	vertical-align:bottom;
	width:34px;
	padding:0;
}
.graph tr.sub td,.mad tr.sub td,.yearly tr.sub td {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
	padding:1px 0 1px 0;
}
.graph tr.sub td.bold,.mad tr.sub td.bold,.yearly tr.sub td.bold {
	color:#666;
}

/* Specific table styling: most active people */
.map {
	text-align:left;
	width:818px;
}
.map img {
	height:6px;
	padding-bottom:3px;
	vertical-align:bottom;
}
.map th {
	color:#666;
	font-weight:bold;
	padding:1px 0 1px 3px;
}
.map td {
	padding:1px 0 1px 0;
	vertical-align:top;
}
.map td.k1,.map td.k2,.map td.k3,.map td.k4,.map td.k5,.map td.k6,.map td.pos {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
}
.map td.k1,.map td.v1 {
	width:80px;
	text-align:right;
}
.map td.k2,.map td.v2 {
	width:78px;
	padding-right:2px;
	text-align:right;
}
.map td.k3,.map td.v3 {
	width:148px;
	padding-left:2px;
}
.map td.k4,.map td.v4 {
	width:54px;
}
.map td.k5,.map td.v5 {
	width:98px;
	padding-left:2px;
}
.map td.k6,.map td.v6 {
	width:327px;
}
.map td.pos {
	width:25px;
	text-align:center;
}

/* Specific table styling: time of day */
.tod {
	text-align:right;
	width:818px;
}
.tod img {
	height:6px;
	padding:2px 0 3px 0;
}
.tod th {
	color:#666;
	font-weight:bold;
	padding:1px 0 1px 3px;
	text-align:left;
}
.tod td {
	padding:1px 0 1px 0;
	vertical-align:top;
}
.tod td.k,.tod td.pos {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
}
.tod td.k,.tod td.v {
	width:195px;
	padding-right:2px;
}
.tod td.pos {
	width:28px;
	text-align:center;
}

/* Specific table styling: small, large */
.small,.large {
	text-align:left;
}
.small {
	width:258px;
}
.large {
	width:818px;
}
.small th,.large th {
	color:#666;
	font-weight:bold;
	padding:1px 3px 1px 3px;
}
.small td,.large td {
	padding:1px 0 1px 0;
}
.small td.k1,.small td.k2,.small td.pos,.large td.k1,.large td.k2,.large td.k3,.large td.pos {
	background-color:#E0E0E0;
	color:#999;
	font-weight:bold;
}
.small td.k1,.small td.v1,.large td.k1,.large td.v1 {
	width:78px;
	padding-right:2px;
	text-align:right;
}
.small td.k2,.small td.v2,.large td.k2,.large td.v2 {
	width:148px;
	padding-left:2px;
}
.large td.k3,.large td.v3 {
	width:560px;
}
.small td.pos,.large td.pos {
	width:26px;
	text-align:center;
}

